fix nav z-index mobile

--- a/assets/css/heroAbout.css
+++ b/assets/css/heroAbout.css
@@ -15,7 +15,6 @@
     display: flex;
     align-items: center;
     position: relative;
-    z-index: 1;
   }
   .bg-img-about {
     display: none;
